# ChurnPredictionModel

./:  resave_xgboost_model.py  .replit  ReadMe.ipynb  ReadMe.md  app.py  dt_model.pkl  gridSearch.pkl  hyptertuning-model.ipynb  knn_model.pkl  main.py  nb_model.pkl  pyproject.toml  render.yml  requirements.txt  start.sh  svm_model.pkl  test.ipynb  utils.py  xgb_model.pkl  xgboost-SMOTE.pkl  xgboost-featureEngineered_model.pkl
