[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Aman Hiran Purohit <purohiam@sheridancollege.ca>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
xgboost = "^1.2.0"
streamlit = "^1.27.2"
pandas = "^2.2.3"
openai = "^1.52.0"
plotly = "^5.24.1"
scipy = "^1.14.1"
numpy = "<2"
scikit-learn = "^1.3.0"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"